<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:layout_margin="@dimen/margin"
    android:id="@+id/containerEdit">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center|left"
        android:text="@string/productName"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productImage"/>

    <EditText
        android:id="@+id/productNameValue"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center|left"
        android:text="@string/productValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/productImage"/>

    <TextView
        android:id="@+id/productQuantity"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center|left"
        android:text="@string/productQuantity"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/productName"/>

    <Button
        android:id="@+id/minusQuanitity"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.15"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center"
        android:text="@string/minus"
        app:layout_constraintLeft_toRightOf="@id/productQuantity"
        app:layout_constraintTop_toBottomOf="@id/productName"
        app:layout_constraintBottom_toTopOf="@id/productPrice"
        android:src="@drawable/button_states"
        android:backgroundTint="@color/blue" />

    <EditText
        android:id="@+id/quanitityAmt"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.2"
        android:gravity="center"
        android:layout_margin="@dimen/marginInside"
        app:layout_constraintLeft_toRightOf="@id/minusQuanitity"
        app:layout_constraintTop_toBottomOf="@id/productName"
        app:layout_constraintBottom_toTopOf="@id/productPrice"
        android:text="@string/quanValue"
        android:digits="0123456789"
        />

    <Button
        android:id="@+id/plusQuanitity"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.15"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center"
        android:text="@string/plus"
        app:layout_constraintLeft_toRightOf="@id/quanitityAmt"
        app:layout_constraintTop_toBottomOf="@id/productName"
        app:layout_constraintBottom_toTopOf="@id/productPrice"
        android:src="@drawable/button_states"
        android:backgroundTint="@color/blue" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center|left"
        android:text="@string/productPrice"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/productQuantity"/>

    <EditText
        android:id="@+id/EditText"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center|left"
        android:text="@string/productPricevalue"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/productPrice"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/productQuantity"
        android:digits="0123456789" />
    <Button
        android:id="@+id/delete"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:background="@drawable/roundcorners"
        android:gravity="center"
        android:src="@drawable/button_states"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productPrice"
        app:layout_constraintWidth_percent="0.3"
        android:backgroundTint="@color/red" />


</androidx.constraintlayout.widget.ConstraintLayout>