<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:layout_margin="@dimen/margin">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center|left"
        android:text="@string/productName"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productImage"
        app:layout_constraintWidth_percent="0.4" />

    <EditText
        android:id="@+id/productNameValue"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center|left"
        android:text="@string/productValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toEndOf="@+id/productName"
        app:layout_constraintTop_toBottomOf="@id/productImage"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/productQuantity"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center|left"
        android:text="@string/productQuantity"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/productName"/>


    <EditText
        android:id="@+id/quanitityAmt"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center"
        android:text="@string/quanValue"
        app:layout_constraintBottom_toTopOf="@id/productPrice"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toRightOf="@+id/productQuantity"
        app:layout_constraintTop_toBottomOf="@id/productName"
        app:layout_constraintWidth_percent="0.4"
        android:digits="0123456789"/>


    <TextView
        android:id="@+id/productPrice"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center|left"
        android:text="@string/productPrice"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/productQuantity"/>

    <EditText
        android:id="@+id/productPriceValue"
        android:layout_width="@dimen/zeroHeight"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:gravity="center|left"
        android:hint="@string/productPricevalue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toRightOf="@id/productPrice"
        app:layout_constraintStart_toEndOf="@+id/productPrice"
        app:layout_constraintTop_toBottomOf="@id/productQuantity"
        app:layout_constraintWidth_percent="0.5"
        android:digits="0123456789"/>
    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zeroHeight"
        android:layout_margin="@dimen/marginInside"
        android:background="@drawable/roundcorners"
        android:gravity="center"
        android:src="@drawable/button_states"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productPrice"
        app:layout_constraintWidth_percent="0.3"
        android:backgroundTint="@color/blue" />


</androidx.constraintlayout.widget.ConstraintLayout>